--- a/SolarGradient/styles.css
+++ b/SolarGradient/styles.css
@@ -1,10 +1,22 @@
-html,body {
-  margin:0;
-  height:100%;
-  background-size:100% 100%;
-  background-position:center center;
-  background-repeat:repeat-x;
-  transition:background-image 1s ease-in-out;
-  backdrop-filter:blur(1vh);
-  -webkit-backdrop-filter:blur(1vh);
+html, body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+.bg-layer {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-repeat: repeat-x;
+  background-size: 100% 100%;
+  background-position: center center;
+  z-index: 0;
+}
+
+.blur-overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  backdrop-filter: blur(1vh);
+  -webkit-backdrop-filter: blur(1vh);
+  z-index: 1;
 }
