--- a/SolarGradient/styles.css
+++ b/SolarGradient/styles.css
@@ -26,8 +26,10 @@ html, body {
   top: 0; left: 0; right: 0; bottom: 0;
   z-index: 0;
 }
-.back {
+body.is-not-static .back {
   background-image: url('images/01.png');
+}
+.back {
   opacity: 1;
   z-index: 0;
 }
