--- a/SolarGradient/styles.css
+++ b/SolarGradient/styles.css
@@ -28,7 +28,7 @@ html, body {
 }
 body.is-not-static .back {
   /* background-image: url('images/01.png'); */
-  background: linear-gradient(to bottom, #05091F 0.0%, #04091F 5.26%, #050A21 10.53%, #050A22 15.79%, #050A23 21.05%, #060B25 26.32%, #070C28 31.58%, #070C2A 36.84%, #080E2E 42.11%, #070E31 47.37%, #091035 52.63%, #0A113A 57.89%, #0B1440 63.16%, #0D1647 68.42%, #0E184F 73.68%, #101C5A 78.95%, #132067 84.21%, #192677 89.47%, #1E2E89 94.74%, #24359A 100.0%);
+  background-image: linear-gradient(to bottom, #05091F 0.0%, #04091F 5.26%, #050A21 10.53%, #050A22 15.79%, #050A23 21.05%, #060B25 26.32%, #070C28 31.58%, #070C2A 36.84%, #080E2E 42.11%, #070E31 47.37%, #091035 52.63%, #0A113A 57.89%, #0B1440 63.16%, #0D1647 68.42%, #0E184F 73.68%, #101C5A 78.95%, #132067 84.21%, #192677 89.47%, #1E2E89 94.74%, #24359A 100.0%);
 }
 .back {
   opacity: 1;
