--- a/SolarGradient/styles.css
+++ b/SolarGradient/styles.css
@@ -1,8 +1,14 @@
+.blur-overlay {
+  backdrop-filter: blur(1vh);
+  -webkit-backdrop-filter: blur(1vh);
+  position:fixed;
+  top:0;left:0;right:0;bottom:0;
+}
 .bg-layer {
   background-position:center center;
   background-repeat:repeat-x;
   background-size:100% 100%;
-  position: absolute;
+  position:fixed;
   top:0;left:0;right:0;bottom:0;
   transition: opacity 1s ease-in-out;
   z-index:0;
