--- a/KsfServers/styles.css
+++ b/KsfServers/styles.css
@@ -11,6 +11,7 @@ body {
 ul {
   font-size: 4.5vh;
   list-style-type: none;
+  text-shadow: 0px 0px 0.3vh pink;
 }
 @media (prefers-color-scheme: dark) {
   a {
